# flazxiv

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
src/: config.rs  main.rs  pixiv.rs  sync.rs
src/mongodb/: bookmark_tags.rs  bookmarks.rs  mod.rs
src/pixiv/: bookmark_tags.rs  bookmarks.rs
src/routes/: bookmark_tags.rs  bookmarks.rs  bookmarks_validate.rs  mod.rs
src/sync/: bookmark_tags.rs  bookmarks.rs  mod.rs
