[package]
name = "flazxiv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
futures = "0.3"
mongodb = "3"
regex-syntax = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "form", "json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
